[gd_scene load_steps=13 format=2]

[ext_resource path="res://codigos/Escena_principal.gd" type="Script" id=1]
[ext_resource path="res://escenas/cubo_rigido.tscn" type="PackedScene" id=2]
[ext_resource path="res://escenas_importadas/material_madera.material" type="Material" id=3]
[ext_resource path="res://typografias/Karate.ttf" type="DynamicFontData" id=4]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Cube"
surfaces/0 = {
"aabb": AABB( -2, 0, -2, 4, 2.00001, 4 ),
"array_data": PoolByteArray( 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 191, 0, 0, 0, 0, 127, 0, 0, 127, 76, 54, 217, 59, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 127, 0, 0, 127, 0, 127, 69, 61, 0, 56, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 127, 0, 0, 127, 0, 127, 21, 181, 138, 188, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 127, 0, 0, 127, 0, 127, 21, 181, 0, 56, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 127, 0, 0, 127, 0, 127, 69, 61, 138, 188, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 64, 129, 0, 0, 0, 0, 127, 0, 127, 69, 61, 138, 188, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 192, 129, 0, 0, 0, 0, 127, 0, 127, 21, 181, 138, 193, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 64, 129, 0, 0, 0, 0, 127, 0, 127, 21, 181, 138, 188, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 192, 129, 0, 0, 0, 0, 127, 0, 127, 69, 61, 138, 193, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 64, 0, 129, 0, 0, 127, 0, 0, 127, 0, 57, 0, 0, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 192, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 192, 0, 129, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 64, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 0, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 192, 127, 0, 0, 0, 0, 127, 0, 127, 69, 61, 69, 64, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 64, 127, 0, 0, 0, 0, 127, 0, 127, 21, 181, 0, 56, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 192, 127, 0, 0, 0, 0, 127, 0, 127, 21, 181, 69, 64, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 64, 127, 0, 0, 0, 0, 127, 0, 127, 69, 61, 0, 56, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 129, 0, 0, 127, 0, 127, 69, 61, 138, 67, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 129, 0, 0, 127, 0, 127, 21, 181, 69, 64, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 129, 0, 0, 127, 0, 127, 21, 181, 138, 67, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 192, 0, 0, 129, 0, 0, 127, 0, 127, 69, 61, 69, 64, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 64, 0, 127, 0, 0, 0, 0, 129, 127, 0, 191, 0, 191, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 63, 0, 127, 0, 0, 0, 0, 129, 127, 170, 189, 213, 64, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 63, 0, 127, 0, 0, 0, 0, 129, 127, 170, 189, 170, 189, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 64, 0, 127, 0, 0, 0, 0, 129, 127, 0, 191, 128, 65, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 191, 0, 127, 0, 0, 0, 0, 129, 127, 213, 64, 213, 64, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 64, 0, 127, 0, 0, 0, 0, 129, 127, 0, 191, 128, 65, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 192, 0, 127, 0, 0, 0, 0, 129, 127, 128, 65, 128, 65, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 63, 0, 127, 0, 0, 0, 0, 129, 127, 170, 189, 213, 64, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 64, 0, 127, 0, 0, 0, 0, 129, 127, 0, 191, 0, 191, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 191, 0, 127, 0, 0, 0, 0, 129, 127, 213, 64, 170, 189, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 192, 0, 127, 0, 0, 0, 0, 129, 127, 128, 65, 0, 191, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 63, 0, 127, 0, 0, 0, 0, 129, 127, 170, 189, 170, 189, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 191, 0, 127, 0, 0, 0, 0, 129, 127, 213, 64, 170, 189, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 192, 0, 127, 0, 0, 0, 0, 129, 127, 128, 65, 128, 65, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 192, 0, 127, 0, 0, 0, 0, 129, 127, 128, 65, 0, 191, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 191, 0, 127, 0, 0, 0, 0, 129, 127, 213, 64, 213, 64, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 63, 129, 0, 0, 0, 0, 129, 0, 127, 0, 0, 0, 62, 114, 251, 217, 63, 208, 204, 76, 62, 114, 251, 217, 191, 129, 0, 0, 0, 0, 129, 0, 127, 255, 59, 0, 65, 114, 251, 217, 63, 208, 204, 76, 62, 114, 251, 217, 63, 129, 0, 0, 0, 0, 129, 0, 127, 0, 60, 0, 62, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 191, 129, 0, 0, 0, 0, 129, 0, 127, 0, 0, 0, 65, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 63, 0, 0, 0, 0, 127, 0, 0, 127, 76, 54, 38, 58, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 191, 0, 0, 0, 0, 127, 0, 0, 127, 217, 56, 217, 59, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 63, 0, 0, 0, 0, 127, 0, 0, 127, 217, 56, 38, 58, 114, 251, 217, 191, 208, 204, 76, 62, 114, 251, 217, 63, 0, 126, 0, 0, 0, 0, 127, 127, 255, 59, 255, 59, 114, 251, 217, 63, 208, 204, 76, 62, 114, 251, 217, 191, 0, 126, 0, 0, 0, 0, 127, 127, 141, 6, 144, 6, 114, 251, 217, 191, 208, 204, 76, 62, 114, 251, 217, 191, 0, 126, 0, 0, 0, 0, 127, 127, 148, 6, 255, 59, 114, 251, 217, 63, 208, 204, 76, 62, 114, 251, 217, 63, 0, 126, 0, 0, 0, 0, 127, 127, 255, 59, 142, 6, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 191, 127, 0, 0, 0, 0, 129, 0, 127, 0, 0, 0, 184, 114, 251, 217, 191, 208, 204, 76, 62, 114, 251, 217, 63, 127, 0, 0, 0, 0, 129, 0, 127, 0, 60, 0, 56, 114, 251, 217, 191, 208, 204, 76, 62, 114, 251, 217, 191, 127, 0, 0, 0, 0, 129, 0, 127, 0, 60, 0, 184, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 63, 127, 0, 0, 0, 0, 129, 0, 127, 0, 0, 0, 56, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 63, 0, 0, 129, 0, 0, 129, 0, 127, 0, 0, 0, 56, 114, 251, 217, 63, 208, 204, 76, 62, 114, 251, 217, 63, 0, 0, 129, 0, 0, 129, 0, 127, 0, 60, 0, 62, 114, 251, 217, 191, 208, 204, 76, 62, 114, 251, 217, 63, 0, 0, 129, 0, 0, 129, 0, 127, 0, 60, 0, 56, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 63, 0, 0, 129, 0, 0, 129, 0, 127, 0, 0, 0, 62, 114, 251, 217, 63, 0, 0, 0, 64, 114, 251, 217, 191, 0, 0, 127, 0, 0, 129, 0, 127, 0, 0, 0, 190, 114, 251, 217, 191, 208, 204, 76, 62, 114, 251, 217, 191, 0, 0, 127, 0, 0, 129, 0, 127, 0, 60, 0, 184, 114, 251, 217, 63, 208, 204, 76, 62, 114, 251, 217, 191, 0, 0, 127, 0, 0, 129, 0, 127, 0, 60, 0, 190, 114, 251, 217, 191, 0, 0, 0, 64, 114, 251, 217, 191, 0, 0, 127, 0, 0, 129, 0, 127, 0, 0, 0, 184 ),
"array_index_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 1, 0, 3, 0, 2, 0, 1, 0, 2, 0, 4, 0, 5, 0, 7, 0, 6, 0, 5, 0, 6, 0, 8, 0, 9, 0, 11, 0, 10, 0, 9, 0, 10, 0, 12, 0, 13, 0, 15, 0, 14, 0, 13, 0, 14, 0, 16, 0, 17, 0, 19, 0, 18, 0, 17, 0, 18, 0, 20, 0, 21, 0, 23, 0, 22, 0, 21, 0, 22, 0, 24, 0, 25, 0, 27, 0, 26, 0, 28, 0, 25, 0, 26, 0, 29, 0, 31, 0, 30, 0, 29, 0, 30, 0, 32, 0, 33, 0, 35, 0, 34, 0, 33, 0, 34, 0, 36, 0, 37, 0, 39, 0, 38, 0, 37, 0, 38, 0, 40, 0, 41, 0, 41, 0, 41, 0, 42, 0, 42, 0, 42, 0, 43, 0, 43, 0, 43, 0, 44, 0, 46, 0, 45, 0, 44, 0, 45, 0, 47, 0, 48, 0, 50, 0, 49, 0, 48, 0, 49, 0, 51, 0, 52, 0, 54, 0, 53, 0, 52, 0, 53, 0, 55, 0, 56, 0, 58, 0, 57, 0, 56, 0, 57, 0, 59, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 96,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 60
}

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( 1.703, 2, -1.703, 1.703, 2, -1.703, 1.703, 2, -1.703, 2, 2, 2, 2, 0, 2, -2, 0, 2, 2, 2, 2, -2, 0, 2, -2, 2, 2, -2, 2, 2, -2, 0, 2, -2, 0, -2, -2, 2, 2, -2, 0, -2, -2, 2, -2, 2, 0, 2, 2, 0, -2, -2, 0, -2, 2, 0, 2, -2, 0, -2, -2, 0, 2, 2, 2, -2, 2, 0, -2, 2, 0, 2, 2, 2, -2, 2, 0, 2, 2, 2, 2, -2, 2, -2, -2, 0, -2, 2, 0, -2, -2, 2, -2, 2, 0, -2, 2, 2, -2, -2, 2, 2, -1.703, 2, 1.703, 1.703, 2, 1.703, -2, 2, 2, 1.703, 2, 1.703, 2, 2, 2, 1.703, 2, -1.703, 2, 2, -2, 2, 2, 2, 1.703, 2, 1.703, 1.703, 2, -1.703, 2, 2, 2, -2, 2, 2, -2, 2, -2, -1.703, 2, -1.703, -2, 2, 2, -1.703, 2, -1.703, -1.703, 2, 1.703, -1.703, 2, -1.703, -2, 2, -2, 2, 2, -2, -1.703, 2, -1.703, 2, 2, -2, 1.703, 2, -1.703, 1.703, 2, 1.703, 1.703, 0.2, 1.703, 1.703, 0.2, -1.703, 1.703, 2, 1.703, 1.703, 0.2, -1.703, 1.703, 2, -1.703, 1.703, 2, 1.703, 1.703, 2, 1.703, 1.703, 2, 1.703, -1.703, 2, -1.703, -1.703, 2, -1.703, -1.703, 2, -1.703, -1.703, 2, 1.703, -1.703, 2, 1.703, -1.703, 2, 1.703, -1.703, 0.2, 1.703, -1.703, 0.2, -1.703, 1.703, 0.2, -1.703, -1.703, 0.2, 1.703, 1.703, 0.2, -1.703, 1.703, 0.2, 1.703, -1.703, 2, -1.703, -1.703, 0.2, -1.703, -1.703, 0.2, 1.703, -1.703, 2, -1.703, -1.703, 0.2, 1.703, -1.703, 2, 1.703, -1.703, 2, 1.703, -1.703, 0.2, 1.703, 1.703, 0.2, 1.703, -1.703, 2, 1.703, 1.703, 0.2, 1.703, 1.703, 2, 1.703, 1.703, 2, -1.703, 1.703, 0.2, -1.703, -1.703, 0.2, -1.703, 1.703, 2, -1.703, -1.703, 0.2, -1.703, -1.703, 2, -1.703 )

[sub_resource type="ArrayMesh" id=2]
resource_name = "Plane"
surfaces/0 = {
"aabb": AABB( -50, 0, -50, 100, 1e-005, 100 ),
"array_data": PoolByteArray( 0, 0, 72, 194, 0, 0, 0, 0, 0, 0, 72, 66, 0, 127, 0, 0, 127, 0, 0, 127, 18, 202, 146, 74, 0, 0, 72, 66, 0, 0, 0, 0, 0, 0, 72, 194, 0, 127, 0, 0, 127, 0, 0, 127, 146, 74, 18, 202, 0, 0, 72, 194, 0, 0, 0, 0, 0, 0, 72, 194, 0, 127, 0, 0, 127, 0, 0, 127, 18, 202, 18, 202, 0, 0, 72, 66, 0, 0, 0, 0, 0, 0, 72, 66, 0, 127, 0, 0, 127, 0, 0, 127, 146, 74, 146, 74 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 6,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 4
}

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -50, 0, 50, -50, 0, -50, 50, 0, -50, -50, 0, 50, 50, 0, -50, 50, 0, 50 )

[sub_resource type="ProceduralSky" id=6]

[sub_resource type="Environment" id=7]
background_mode = 2
background_sky = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 4 )

[node name="Escena_principal" type="Spatial"]
script = ExtResource( 1 )
cubo = ExtResource( 2 )

[node name="Escena_caja_y_cubo" type="Spatial" parent="."]
editor/display_folded = true

[node name="cofre" type="MeshInstance" parent="Escena_caja_y_cubo"]
editor/display_folded = true
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Escena_caja_y_cubo/cofre"]

[node name="CollisionShape" type="CollisionShape" parent="Escena_caja_y_cubo/cofre/StaticBody"]
shape = SubResource( 4 )

[node name="suelo" type="MeshInstance" parent="Escena_caja_y_cubo"]
editor/display_folded = true
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Escena_caja_y_cubo/suelo"]

[node name="CollisionShape" type="CollisionShape" parent="Escena_caja_y_cubo/suelo/StaticBody"]
shape = SubResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.449795, -0.62996, -0.633115, -0.00770027, -0.71158, 0.702563, -0.893098, -0.311134, -0.324916, 0, 6.505, -7.21015 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.479243, 0.627294, -0.613863, 0, 0.699414, 0.714717, 0.877682, 0.342523, -0.33519, -4.342, 7.558, -2.732 )

[node name="Position_inicial_cubo" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9, 0 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="contando_cubos" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -276.5
margin_top = -54.0
margin_right = 276.5
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Cantidad de cubos = "

[node name="Fps" type="Label" parent="."]
margin_right = 279.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 9 )
text = "Fps = "
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
